--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "html2canvas": "^1.4.1",
     "konva": "^9.3.20",
+    "node-sass": "^9.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-konva": "^18.2.10",
-    "react-konva-utils": "^1.0.7"
+    "react-konva-utils": "^1.0.7",
+    "sass": "^1.86.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
