--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "html2canvas": "^1.4.1",
     "konva": "^9.3.20",
     "node-sass": "^9.0.0",
+    "quill": "^2.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-konva": "^18.2.10",
     "react-konva-utils": "^1.0.7",
+    "react-quill": "^2.0.0",
     "sass": "^1.86.0"
   },
   "devDependencies": {
