--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-konva": "^18.2.10",
     "react-konva-utils": "^1.0.7",
     "react-quill": "^2.0.0",
+    "react-quill-new": "^3.4.6",
     "sass": "^1.86.0"
   },
   "devDependencies": {
